add service Token
