# paymentService/src/main/resources/api/openapi.yaml
@@ -8,10 +8,20 @@ info:
 servers:
   - url: http://localhost:8083
 
+tags:
+  - name: PaymentMethods
+    description: Operations with available payment methods
+
+  - name: Payments
+    description: Payment processing operations
+
 paths:
 
   /api/v1/payment-methods/{currencyCode}/{countryCode}:
     get:
+      tags:
+        - PaymentMethods
+
       operationId: getAvailablePaymentMethods
       summary: Get available payment methods
       description: Returns payment methods available for specified currency and country
@@ -41,7 +51,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/PaymentMethodResponse'
+                  $ref: "#/components/schemas/PaymentMethodResponse"
 
         "400":
           description: Invalid request
@@ -51,6 +61,9 @@ paths:
 
   /api/v1/payments:
     post:
+      tags:
+        - Payments
+
       operationId: processPayment
       summary: Process payment
       description: Sends payment request to external payment provider
@@ -60,16 +73,15 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/PaymentRequest'
+              $ref: "#/components/schemas/PaymentRequest"
 
       responses:
         "200":
           description: Payment processed
-
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/PaymentResponse'
+                $ref: "#/components/schemas/PaymentResponse"
 
         "400":
           description: Invalid request
@@ -111,7 +123,7 @@ components:
         requiredFields:
           type: array
           items:
-            $ref: '#/components/schemas/RequiredField'
+            $ref: "#/components/schemas/RequiredField"
 
     RequiredField:
       type: object
@@ -198,7 +210,7 @@ components:
           type: string
 
         status:
-          $ref: '#/components/schemas/PaymentStatus'
+          $ref: "#/components/schemas/PaymentStatus"
 
     PaymentStatus:
       type: string
